Refactor backtracking to use removeLast()
Replaces currentCombination.remove(currentCombination.size() - 1) with currentCombination.removeLast() for improved readability and efficiency in the backtracking step.